@@ -1,3 +1,7 @@
+2008-12-16 Richard frith-Macdonald <rfm"gnu.org>
+
+	Attempt to get NSRole set correctly in document type info.
+
 2008-12-09 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Framework/PCPrefController.m: corrected wrong outlet 
